Upgrade to Gradle 7.1 and Java 16